style/index.css
/*Default CSS Rules*/
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    border: none;
    list-style-type: none;
}

:root {
    font-size: 16px;
}

a {
    color: inherit;
    text-decoration: inherit;
}

img {
    max-width: 100%;
    height: auto;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type=number] {
  -moz-appearance: textfield;
}

textarea:focus, input:focus {
    outline: none;
}


/*Default CSS Custom Variables*/
:root {
    --default-font-size: clamp(2.25rem, 2vw + 1.5rem, 3.25rem);
    --default-max-inline-size: 66ch;
    --default-line-height: 1.65;
    --default-font-family: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono', monospace;
    --dark-grey: #1b1b1b;
    --light-grey: #80868B;
    --blue: #4285F4;
    --white: whitesmoke;
}

/*Webpage Specific Rules*/
main {
    height: 100svh;
    width: 100svw;
    background-color: var(--dark-grey);
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 6fr 0.5fr;
    row-gap: calc(var(--default-font-size)*0.5);
    justify-items: center;
    align-items: end;
}

.title-container {
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: calc(var(--default-font-size)*0.6);
    border-bottom: 1px solid var(--light-grey);
}

.title-image {
    height: calc(var(--default-font-size)*1.75);
    width: auto;
    border-radius: 50px;
    border: 3px solid var(--blue);
}

.title-text {
    font-size: calc(var(--default-font-size)*1.75);
    text-transform: capitalize;
    color: var(--blue);
}

.board-container {
    height: 100%;
    width: 100%;
    display: grid;
    justify-content: center;
    grid-template-columns: repeat(3, minmax(100px, 200px));
    gap: calc(var(--default-font-size)*0.5);
}

button {
    background-color: var(--light-grey);
}

